--- a/sections/manga.html
+++ b/sections/manga.html
@@ -110,8 +110,72 @@
       </div>
     </div>
 
+  </div>  
+  
+  <h2 class="display-5" id="h1">Comics Marvel</h2>
+
+
+  <div class="displaycomic">
+    <div class="card" style="width: 15rem;">
+      <img src="../img/civilwar.jpg" class="card-img-top" alt="cw">
+      <div class="card-body">
+        <h5 class="card-title">Civil War</h5>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="../img/deadpool.jpg" class="card-img-top" alt="dp">
+      <div class="card-body">
+        <h5 class="card-title">Deadpool kill The Marvel Universe</h5>
+      </div>
+    </div><div class="card" style="width: 15rem;">
+      <img src="../img/guardianesdelagalaxia.jpg" class="card-img-top" alt="gd">
+      <div class="card-body">
+        <h5 class="card-title">Marvel's Guardians of the Galaxy: No Guts, No Glory</h5>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="../img/Venom_Vs._Carnage_Vol_1.png" class="card-img-top" alt="vc">
+      <div class="card-body">
+        <h5 class="card-title">Venom vs Carnage</h5>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="../img/spiderman.jpg" class="card-img-top" alt="sm">
+      <div class="card-body">
+        <h5 class="card-title">SpiderMan</h5>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="../img/guerrassecretas.jpg" class="card-img-top" alt="gs">
+      <div class="card-body">
+        <h5 class="card-title">Guerras Secretas</h5>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="../img/deadpoolandspiderman.jpg" class="card-img-top" alt="DS">
+      <div class="card-body">
+        <h5 class="card-title">DeadPool vs SpiderMan</h5>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="../img/Black-Panther.jpg" class="card-img-top" alt="bp">
+      <div class="card-body">
+        <h5 class="card-title">Black Panther</h5>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="../img/ironman.jpg" class="card-img-top" alt="im">
+      <div class="card-body">
+        <h5 class="card-title">El invensible Iron Man</h5>
+      </div>
+    </div>
+    <div class="card" style="width: 15rem;">
+      <img src="../img/capitanamerica.jpg" class="card-img-top" alt="ca">
+      <div class="card-body">
+        <h5 class="card-title">Capitan America: Sentinela de la Libertad</h5>
+      </div>
+    </div>
   </div>
-    
   <!--end Cards-->
 
   <!--footer-->
