--- a/sections/romance.html
+++ b/sections/romance.html
@@ -87,7 +87,7 @@
     <h1 class="display-5" id="h1">Bestseller 2021/2022</h1>
   </div>
   <!--cards-->
-  <div class="cardDisplay">
+  <div id="cardDisplay" class="animate">
     <div class="card" style="width: 15rem;">
       <img src="https://m.media-amazon.com/images/I/51c+RkKG-8L.jpg" class="card-img-top" alt="ylt">
       <div class="card-body">
@@ -148,37 +148,55 @@
        <h5 class="card-title">La Ultima Parada</h5>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://images-na.ssl-images-amazon.com/images/I/51s2ziWSNpL._SY291_BO1,204,203,200_QL40_FMwebp_.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="lvdsi">
+
+  </div> 
+  <h2 class="display-5" id="h1">Reseñas de los favoritos</h2>
+     
+    <div class="card" id="gradienteRomance">
+      <figure class="figure">
+        <img src="../img/lasventajasdeserinvisiblee.jpg" class="figure-img img-fluid rounded" alt="lvdsi" style="width: 15rem;">
+      </figure>
       <div class="card-body">
-        <h5 class="card-title">Las Ventajas De Ser Invisible</h5>
+        <h5 class="card-title">Las Ventajas de ser Invisible</h5>
+        <p class="card-text">Charlie es un joven socialmente torpe y siempre está viendo la vida desde la barrera, hasta que dos estudiantes carismáticos se convierten en sus mentores. Sam y su hermanastro Patrick ayudan a Charlie a descubrir las alegrías de la amistad, el primer amor, la música y mucho más, mientras que un maestro provoca que él sueñe con ser un escritor. Sin embargo, mientras sus nuevos amigos se preparan para ir a la universidad, su tristeza interior amenaza con destruir su confianza.</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://images.cdn1.buscalibre.com/fit-in/360x360/a5/4e/a54e6e8a9f75669f7b307233b5fba196.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="wh">
+    <div class="card" id="gradienteRomance">
+      <figure class="figure">
+        <img src="../img/whishes.png" class="figure-img img-fluid rounded" alt="whishes" style="width: 15rem;">
+      </figure>
       <div class="card-body">
-        <h5 class="card-title">Wishes</h5>
+        <h5 class="card-title">Whishes</h5>
+        <p class="card-text">¿Y si te dijera que la magia existe? Los magos, los ángeles, las criaturas, todo es real… incluso los deseos. Cada mago debe gastar su magia de algún modo, Alexander Leblanc concede deseos a cambio de historias o recuerdos, luego guarda su paga en frascos mágicos que eligen al azar el precio a pagar... y sigue con su vida. Una rutina monótona y constante…Hasta que conoce a Lucian Asher. Él no tiene idea de la magia, pero cree en ella. Alexander jamás pudo imaginar que ese niño era mitad ángel, un tabú contra las leyes de los magos, y ni todos los oráculos del mundo pudieron haber adivinado que ellos se vincularían sin darse cuenta y que, el precio de sus deseos, sería que Lucian debía olvidar a Alexander cuando fueran concedidos. Es un embrollo gigante y Alex no puede pedir ayuda porque el Consejo de magos lo odia. Pero lo cierto es que los enfrentaría a ellos y al Apocalipsis con tal de que Lucian no lo olvidara. Atravesaría un infierno solo para que su amado ángel recuerde aunque sea un poco de él y lo ame también. El mago no encuentra el modo, pero la magia y el destino sí. El frasco de deseos está por llenarse y todo lo que ha sido dado se puede devolver. Lucian Asher ha soñado con él.</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/67/90/6790326ab0aa68428efcfe6f47a7e9c5.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="crn">
+    <div class="card" id="gradienteRomance">
+      <figure class="figure">
+        <img src="../img/carnaval.jpg" class="figure-img img-fluid rounded" alt="carnaval" style="width: 15rem;">
+      </figure>
       <div class="card-body">
         <h5 class="card-title">Carnaval</h5>
+        <p class="card-text">Scarlett Dragna sueña con asistir a la celebración anual de Caraval, unos legendarios juegos que duran una semana y en los que la audiencia participa para ganar el Gran Premio. Caraval es magia, misterio y aventura. Y para Scarlett y su hermana representa la libertad y poder de huir de su estricto y cruel padre.Ahora Scar está a punto de casarse con un hombre al que nunca ha visto y cree ... Ver más Ocultar Scarlett Dragna sueña con asistir a la celebración anual de Caraval, unos legendarios juegos que duran una semana y en los que la audiencia participa para ganar el Gran Premio. Caraval es magia, misterio y aventura. Y para Scarlett y su hermana representa la libertad y poder de huir de su estricto y cruel padre.Ahora Scar está a punto de casarse con un hombre al que nunca ha visto y cree que su sueño nunca se cumplirá. Justo dos semanas antes de la boda, recibe la ansiada invitación a los juegos. Sin embargo, ahí nada sale como se espera: Legend, el Maestro de Caraval, secuestra a su hermana y Scar se verá obligada a entrar en un peligroso juego de amor, sueños, medias verdades y magia en el que nada es lo que parece. Real o no, sólo tendrá cinco noches para descifrar las pistas que conducen hacia su hermana, o ésta desaparecerá para siempre. Scarlett Dragna sueña con asistir a la celebración anual de Caraval, unos legendarios juegos que duran una semana y en los que la audiencia participa para ganar el Gran Premio. Caraval es magia, misterio y aventura. Y para Scarlett y su hermana representa la libertad y poder de huir de su estricto y cruel padre.Ahora Scar está a punto de casarse con un hombre al que nunca ha visto y cree que su sueño nunca se cumplirá. Justo dos semanas antes de la boda, recibe la ansiada invitación a los juegos. Sin embargo, ahí nada sale como se espera: Legend, el Maestro de Caraval, secuestra a su hermana y Scar se verá obligada a entrar en un peligroso juego de amor, sueños, medias verdades y magia en el que nada es lo que parece. Real o no, sólo tendrá cinco noches para descifrar las pistas que conducen hacia su hermana, o ésta desaparecerá para siempre.</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/fc/ba/fcba9bf637cdeec7598e936bd16e78ee.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="ego">
+    <div class="card" id="gradienteRomance">
+      <figure class="figure">
+        <img src="../img/elguerrerocoulto.png" class="figure-img img-fluid rounded" alt="ego" style="width: 15rem;">
+      </figure>
       <div class="card-body">
         <h5 class="card-title">El Guerrero Oculto</h5>
+        <p class="card-text">Una amistad. Una misión. Una lucha por la identidad. Al cumplir los 17 años, Nálum debe asistir al baile anual en el palacio del emperador y encontrar una pareja digna de la aprobación de su padre. Pero un terrible ataque a la familia real pone en riesgo su mundo. Nálum hará lo que sea por restituir el orden, incluso infiltrarse en una peligrosa misión y, finalmente, enfrentar a todos sus demonios.</p>
       </div>
     </div>
-    <div class="card" style="width: 15rem;">
-      <img src="https://images.cdn3.buscalibre.com/fit-in/360x360/3b/4d/3b4dd9c9bd88ee5e92b20d28b8a96d02.jpg" class="card-img-top" alt="epc" class="card-img-top" alt="eldle">
+    <div class="card" id="gradienteRomance">
+      <figure class="figure">
+        <img src="../img/ellenguajedelasespinas.jpg" class="figure-img img-fluid rounded" alt="eldle" style="width: 15rem;">
+      </figure>
       <div class="card-body">
-        <h5 class="card-title">El Lenguaje De Las Espinas</h5>
+        <h5 class="card-title">El Lenguaje de las Espinas</h5>
+        <p class="card-text">Viaja a un mundo de oscuras joyas bañadas por la luz de la luna, de pueblos encantados y bosques hambrientos, de bestias parlantes y golems de pan de jengibre; un lugar donde las voces de unas jóvenes sirenas pueden provocar amenazantes tormentas y donde un río podría hacerle una suculenta oferta a un chico enamorado a cambio de un terrible precio. Perfecto para nuevos lectores y fans incondicionales, las historias de El lenguaje de las espinas te transportarán a tierras conocidas y extrañas al mismo tiempo, a un mundo de magia peligrosa que millones de lectores ya han visitado gracias a las novelas del Grishaverse. Esta colección de seis historias incluye tres relatos completamente nuevos, cada uno de ellos cargado de impresionantes ilustraciones tan ricas en detalles como las propias historias.</p>
       </div>
     </div>
-  </div>
   <!--end cards-->
 
   <!--footer-->
